--- a/src/index.css
+++ b/src/index.css
@@ -40,11 +40,10 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
   background-color: var(--bg);
+  width: 100%;
 }
 
 h1 {
